fix: note shadow hidden by layer

--- a/src/style.scss
+++ b/src/style.scss
@@ -53,8 +53,8 @@
 
 }
 .c-note-list{
-    overflow: hidden;
     margin: 0;
+    overflow: visible; // 便于阴影的显示
 }
 .c-note-item{
     float: left;
@@ -64,7 +64,6 @@
     border-bottom: 1px solid #f2f2f2;
     border-right: 1px solid #f2f2f2;
     cursor: pointer;
-    background-color: #ffffff;
 }
 .c-note-item:hover{
     box-shadow: 2px 2px 10px #bdbdbd;
